# TER

./: dino_simple.ipynb  index.html  pyproject.toml
DinoImpl/: .gitignore  ARCHITECTURE.md  PLAN_KNN_EVAL.md  README.md  dino_simple.ipynb  index.html  mkdocs.yml  pyproject.toml  todo.md
DinoImpl/.github/workflows/: docs.yml
DinoImpl/advanced/design-decisions/: index.html
DinoImpl/advanced/extending/: index.html
DinoImpl/advanced/performance/: index.html
DinoImpl/api/data/: index.html
DinoImpl/api/loss/: index.html
DinoImpl/api/models/: index.html
DinoImpl/api/training/: index.html
DinoImpl/api/utils/: index.html
DinoImpl/configs/: arm.yaml  cifar100.yaml  default.yaml  default_debug.yaml  example.yaml  fish4knowledge.yaml  imagenet100-resnet.yaml  imagenet100.yaml  imagenette.yaml  kaggle-amr-global.yaml  kaggle-amr.yaml  kaggle-imagenet100.yaml  kaggle-imagenette.yaml
DinoImpl/dataset/: amrs-little-prince.json  amrs.json
DinoImpl/docs/: index.md  kaggle-guide.md  troubleshooting.md
DinoImpl/docs/advanced/: design-decisions.md  extending.md  performance.md  testing.md
DinoImpl/docs/api/: data.md  loss.md  models.md  training.md  utils.md
DinoImpl/docs/getting-started/: cli-reference.md  installation.md  quickstart.md
DinoImpl/docs/guides/: checkpointing.md  configuration.md  data-pipeline.md  loss-function.md  models.md  training.md
DinoImpl/guides/configuration/: index.html
DinoImpl/guides/data-pipeline/: index.html
DinoImpl/guides/loss-function/: index.html
DinoImpl/guides/models/: index.html
DinoImpl/guides/training/: index.html
DinoImpl/kaggle/: kaggle_manager.sh
DinoImpl/kaggle/kernel/: kernel-metadata.json  train_kaggle.py
DinoImpl/scripts/: evaluate_amr-global.ipynb  evaluate_amr-node.ipynb  sentiment_amr.csv  train.py  train_arm.py  visualize.py
DinoImpl/search/: search_index.json
DinoImpl/site/: 404.html  objects.inv  sitemap.xml
(+47 files in other folders)
